--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -9,7 +9,7 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
         <a
           href="https://danielsegarra.dev/StudentShowcase/"
           target="_blank"
-          rel="noopener noreferrer"><mark>Student Accoplishments</mark></a
+          rel="noopener noreferrer"><mark>Student Accomplishments</mark></a
         >
       </li>
       <li>
